Generalized VM params

--- a/terraform/credentials.auto.tfvars.example
+++ b/terraform/credentials.auto.tfvars.example
@@ -6,3 +6,12 @@ vsphere_datacenter_name = "ADatacenterName"
 vsphere_cluster_name    = "AClusterName"
 vsphere_network_name    = "VM Network"
 vsphere_folder_name     = "devops"
+
+vm_name                 = "example_vm"
+vm_domain               = "localdomain"
+vm_ip                   = "192.168.1.101"
+vm_netmask              = 24
+vm_gateway              = "192.168.1.1"
+vm_cpus                 = 1
+vm_ram_mb               = 1024
+vm_disk_gb              = 10
