Add resize part &fs to disk size

--- a/terraform/credentials.auto.tfvars.example
+++ b/terraform/credentials.auto.tfvars.example
@@ -15,3 +15,6 @@ vm_gateway              = "192.168.1.1"
 vm_cpus                 = 1
 vm_ram_mb               = 1024
 vm_disk_gb              = 10
+
+vm_initial_user         = "ubuntu"
+vm_initial_password     = "zmn9ToZwTKLhCw.b4"
